fixed dark mode

--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,12 @@
 :root {
-  --background-primary: white;
-  --background-secondary: "";
-  --background-tertiary: #dbeafe;
-  --background-accent: "";
-  --background-compliment: "";
-  --background-gradient: "";
-  --background-muted: #f8fafc;
-
-  --color-primary: #030615;
-  --color-secondary: "";
-  --color-tertiary: "";
-  --color-accent: "";
-  --color-compliment: "";
-  --color-gradient: "";
-  --color-muted: ;
+  --base-color: white;
+  --base-variant: #e8e9ed;
+  --text-color: black;
+  --secondary-text: grey;
   --color-link: #2563eb;
-  --color-link-transparent: rgba(37, 99, 235, 0.1);
-
-  --color-success: "";
-  --color-warning: "";
-  --color-error: "";
-  --color-info: "";
-  --color-highlight: #fef9c3;
-
-  --gradient-start: #9580ff;
-  --gradient-end: #80ffea;
-
-  --border-primary: #f1f5f9;
-  --border-secondary: #bed1e7;
-  --border-highlight: #64748b;
-  --border-tertiary: "";
-
-  --shadow-dark: "";
-  --shadow-light: "";
-  --shadow-text: "";
-
-  --padding-small: 1rem;
-  --padding-large: 2rem;
+  --accent-color: orange;
 
   --border-radius-small: 0.5rem;
-  --border-radius-large: 0.75rem;
-  --highlight-border-radius: 0.5rem;
-
-  --text-selection: "";
 }
 
 * {
@@ -65,6 +29,8 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: var(--base-color);
+  color: var(--text-color);
 }
 
 header,
@@ -93,9 +59,23 @@ nav i {
   font-size: 1.3rem;
 }
 
-/* .fixed-ukr-link {
-  position: fixed;
-} */
+.darkmode {
+  --base-color: rgb(0, 0, 0);
+  --base-variant: #070808;
+  --text-color: rgb(255, 255, 255);
+  --secondary-text: rgb(129, 158, 253);
+  td {
+    background-color: black;
+  }
+
+  /* th {
+    background-color: black;
+  } */
+
+  .project-card img {
+    border: 1px solid white;
+  }
+}
 
 main,
 section {
@@ -116,7 +96,7 @@ section {
 }
 
 .intro-description {
-  max-width: 500px;
+  max-width: 100%;
 }
 
 .links-container {
